<resources>
    <string name="app_name">FearlessJumper</string>
    <string name="menuStart">START GAME</string>
    <string name="menuQuit">QUIT GAME</string>
    <string name="pauseButtonDesc">Pause Button for Game</string>
    <string name="startButtonDesc">Start Button for Main menu</string>
    <string name="resumeButtonDesc">Resume Button for Pause menu</string>
    <string name="life">Life</string>
    <string name="count">Max</string>
    <string name="rate">Rate</string>
    <string name="speed">Speed</string>
    <string name="xPosVar">X Var</string>
    <string name="yPosVar">Y Var</string>
    <string name="direction">Direction</string>
    <string name="directionVar">Dir Var</string>
    <string name="render">Render</string>


    <!-- Emitter Types -->
    <string name="cone_diverge">CONE DIVERGE</string>
</resources>
