<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="4dp"
    android:paddingTop="10dp">


    <!-- ___________________________FIRST LINE BEGINS______________________________ -->
    <!--Max-->
    <TextView
        android:id="@+id/maxParticlesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        app:layout_constraintBottom_toBottomOf="@id/maxParticlesValue"
        app:layout_constraintEnd_toStartOf="@id/maxParticlesValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/maxParticlesValue"/>

    <EditText
        android:id="@+id/maxParticlesValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="300"
        android:textAlignment="center"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@id/lifeText"
        app:layout_constraintStart_toEndOf="@id/maxParticlesText"
        app:layout_constraintTop_toTopOf="parent"/>


    <!--Life-->
    <TextView
        android:id="@+id/lifeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/life"
        app:layout_constraintBottom_toBottomOf="@id/lifeValue"
        app:layout_constraintEnd_toStartOf="@id/lifeValue"
        app:layout_constraintStart_toEndOf="@id/maxParticlesValue"
        app:layout_constraintTop_toTopOf="@id/lifeValue"/>

    <EditText
        android:id="@+id/lifeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="800"
        android:textAlignment="center"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@id/rateText"
        app:layout_constraintStart_toEndOf="@id/lifeText"
        app:layout_constraintTop_toTopOf="parent"/>


    <!--Rate-->
    <TextView
        android:id="@+id/rateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        app:layout_constraintBottom_toBottomOf="@id/rateValue"
        app:layout_constraintEnd_toStartOf="@id/rateValue"
        app:layout_constraintStart_toEndOf="@id/lifeValue"
        app:layout_constraintTop_toTopOf="@id/rateValue"/>

    <EditText
        android:id="@+id/rateValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="100"
        android:textAlignment="center"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@id/posVarText"
        app:layout_constraintStart_toEndOf="@id/rateText"
        app:layout_constraintTop_toTopOf="parent"/>

    <!--Position var-->
    <TextView
        android:id="@+id/posVarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/positionVar"
        app:layout_constraintBottom_toBottomOf="@id/posVarValue"
        app:layout_constraintEnd_toStartOf="@id/posVarValue"
        app:layout_constraintStart_toEndOf="@id/rateValue"
        app:layout_constraintTop_toTopOf="@id/posVarValue"/>

    <EditText
        android:id="@+id/posVarValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="15"
        android:textAlignment="center"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/posVarText"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- ___________________________FIRST LINE ENDS______________________________ -->


    <!-- ___________________________SECOND LINE BEGINS______________________________ -->

    <!--Speed-->
    <TextView
        android:id="@+id/speedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed"
        app:layout_constraintBottom_toBottomOf="@id/speedValue"
        app:layout_constraintEnd_toStartOf="@id/speedValue"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/speedValue"/>

    <EditText
        android:id="@+id/speedValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="6"
        android:textAlignment="center"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@id/dirText"
        app:layout_constraintStart_toEndOf="@id/speedText"
        app:layout_constraintTop_toBottomOf="@id/maxParticlesText"/>

    <!--Direction-->
    <TextView
        android:id="@+id/dirText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction"
        app:layout_constraintBottom_toBottomOf="@id/dirValue"
        app:layout_constraintEnd_toStartOf="@id/dirValue"
        app:layout_constraintStart_toEndOf="@id/speedValue"
        app:layout_constraintTop_toTopOf="@id/dirValue"/>

    <EditText
        android:id="@+id/dirValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="-90"
        android:textAlignment="center"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@id/dirVarText"
        app:layout_constraintStart_toEndOf="@id/dirText"
        app:layout_constraintTop_toBottomOf="@id/maxParticlesText"/>

    <!--Direction Var-->
    <TextView
        android:id="@+id/dirVarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/directionVar"
        app:layout_constraintBottom_toBottomOf="@id/dirVarValue"
        app:layout_constraintEnd_toStartOf="@id/dirVarValue"
        app:layout_constraintStart_toEndOf="@id/dirValue"
        app:layout_constraintTop_toTopOf="@id/dirVarValue"/>

    <EditText
        android:id="@+id/dirVarValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="3"
        android:textAlignment="center"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dirVarText"
        app:layout_constraintTop_toBottomOf="@id/maxParticlesText"/>

    <!-- ___________________________SECOND LINE ENDS______________________________ -->


    <!--Drop down menu for emitter type-->
    <Spinner
        android:id="@+id/emitterType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/speedText"/>

    <!--Render button-->
    <Button
        android:id="@+id/render"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/render"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emitterType"/>


</android.support.constraint.ConstraintLayout>